# hackai2026

./: .env.example  .gitignore  API.md  requirements.txt
app/: config.py  main.py  store.py
app/api/: routes.py
app/backend/: conversation_prompt.md  goal_extractor.py  goal_personalization.py  main__  roadmap_generator.py  test_module.py  test_voice.py
app/models/: course.py
app/services/: article_service.py  audio_service.py  gemini_service.py  imagen_service.py  veo_service.py  youtube_service.py
goalFinder/: .gitignore  INTEGRATION_GUIDE.md  README.md  pyproject.toml
goalFinder/backend/: config.py  goal_extractor.py  test_module.py
goalFinder/frontend/: index.html
lumora/: package.json  pnpm-lock.yaml
lumora/app/: globals.css  layout.tsx  page.tsx
lumora/lib/: config.ts  constants.ts
lumora/mocks/: chat-responses.json  further-study.json  recommended-courses.json  roadmap.json  user-profile.json
roadmapGen/: .env.example  .gitignore  README.md  pyproject.toml
roadmapGen/app/: __init__.py  main.py
roadmapGen/app/api/: routes.py
roadmapGen/app/core/: config.py  dependencies.py
roadmapGen/app/providers/: base.py  gemini.py  parsing.py
roadmapGen/app/repository/: mongodb.py
roadmapGen/app/schemas/: api.py
roadmapGen/app/services/: prompt_builder.py  roadmap_service.py  validator.py
roadmapGen/tests/: conftest.py  test_api.py  test_models.py  test_prompt_builder.py  test_provider_parsing.py  test_repository.py  test_service.py  test_validator.py
static/: index.html
tests/: test_goal_extractor_personalization.py
(+49 files in other folders)
